Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-138706

[Wayland] Application freeze when mouse is doing UI-blocking operations

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • None
    • 6.9.1
    • QPA: Wayland
    • None
    • KWin 6.4.3
    • Linux/Wayland
    • 095759818 (dev)

      1. Run attached sample application: wlslider.tar.gz
      2. Quickly move the slider - compare XCB and Wayland platforms

       

      It behaves like AA_CompressHighFrequencyEvents disabled in XCB - looks like it's not implemented on Wayland yet.

       

      Additionally it can be observed in QtCreator when you have open help panel with large amount of text next to the source code and you resize it (also when selecting text there), see video: qtcwl.mp4

        1. mouse-event-compression.diff
          4 kB
        2. qtcwl.mp4
          1.57 MB
        3. wayland.mp4
          73 kB
        4. wlslider.tar.gz
          0.7 kB
        5. xcb.mp4
          65 kB
        For Gerrit Dashboard: QTBUG-138706
        # Subject Branch Project Status CR V

            davidedmundson David Edmundson
            zaps166 Błażej Szczygieł
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes